clone kickstarter landing

--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -4,3 +4,21 @@
     #{$_property}: $_toValue;
   }
 }
+
+@mixin onTablet {
+  @media (min-width: 740px) {
+    @content;
+  }
+}
+
+@mixin onDesktop-1200 {
+  @media (min-width: 1200px) {
+    @content;
+  }
+}
+
+@mixin onDesktop-1440 {
+  @media (min-width: 1440px) {
+    @content;
+  }
+}
