--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,25 @@
-$c-gray: #eee;
+$color-white-buttons-text: #fff;
+$color-white: #f7f7f7;
+
+$color-light-grey-disabled:#d0d0d0;
+$color-grey-copyright: #bdbdbd;
+$color-grey-secondary-text: #7c7c7c;
+$color-dark-grey-body-buttons: #333;
+$color-grey-form: #828282;
+
+$color-black: #131313;
+$color-light-green: #eefafa;
+$color-medium-green: #cfeff0;
+$color-dark-green:#0db2b3;
+$color-green-accent:#0c797a;
+$color-red: #eb5757;
+
+$section-margin-bottom-desktop-1200: 170px;
+$section-margin-bottom-tablet: 140px;
+$section-margin-bottom-mobile: 110px;
+
+$padding-inline-mobile: 30px;
+$padding-inline-tablet: 34px;
+$padding-inline-desktop: 123px;
+
+$transition-duration: 0.3s;
