--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,24 @@
 @import "utils";
-@import "fonts";
-@import "typography";
 
-body {
-  background: $c-gray;
-}
+@import "./blocks/page";
+@import "./blocks/container";
+@import "./blocks/header";
+@import "./blocks/top-bar";
+@import "./blocks/icon";
+@import "./blocks/menu";
+@import "./blocks/nav";
+@import "./blocks/button";
+@import "./blocks/toolbar";
+
+@import "./blocks/main";
+@import "./blocks/benefits";
+@import "./blocks/benefit";
+@import "./blocks/presentation";
+@import "./blocks/about-us";
+@import "./blocks/about-us-fact";
+@import "./blocks/section-title";
+@import "./blocks/testimonials";
+@import "./blocks/features";
+@import "./blocks/questions";
+
+@import "./blocks/footer";
